# matchbox

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  build.rs  docker-compose.yml  matchbox-roadmap.md  plan-phase1-garbage-collection.md  plan-phase1-inline-caches.md  plan-phase1-shapes.md  test  test.js  thing.bxs
.github/workflows/: release.yml  snapshot.yml
crates/matchbox-compiler/: Cargo.toml
crates/matchbox-compiler/src/: lib.rs  prelude.bxs
crates/matchbox-compiler/src/ast/: mod.rs
crates/matchbox-compiler/src/compiler/: mod.rs
crates/matchbox-compiler/src/parser/: boxlang.pest  bxm.rs  mod.rs
crates/matchbox-embedded/: Cargo.toml
crates/matchbox-embedded/src/: lib.rs
crates/matchbox-esp32-runner/: Cargo.toml  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.psram  sdkconfig.defaults.xiao-esp32s3-sense.psram  sdkconfig.xiao-esp32s3-sense
crates/matchbox-esp32-runner/.cargo/: config.toml
crates/matchbox-esp32-runner/src/: boot.rs  camera.rs  esp32_bifs.rs  features.rs  imaging.rs  lib.rs  main.rs  mdns.rs  platform.rs  printer.rs  profile.rs  web.rs  wifi.rs
crates/matchbox-lambda-runner/: Cargo.toml
crates/matchbox-lambda-runner/src/: deploy.rs  lib.rs  main.rs  packaging.rs  runtime_api.rs
crates/matchbox-macros/: Cargo.toml
crates/matchbox-macros/src/: lib.rs
crates/matchbox-runner/: Cargo.toml
crates/matchbox-runner/src/: main.rs
crates/matchbox-server/: Cargo.toml
crates/matchbox-server/src/: app_server.rs  lib.rs  main.rs  webroot_core.rs  websocket.rs  websocket_tests.rs
crates/matchbox-tui/: Cargo.toml
crates/matchbox-tui/src/: lib.rs  rendering_context.rs  terminal.rs  tui_app_test.rs  widget.rs
crates/matchbox-utility/: Cargo.toml
crates/matchbox-utility/src/: lib.rs
crates/matchbox-vm/: Cargo.toml
crates/matchbox-vm/src/: lib.rs
crates/matchbox-vm/src/bifs/: cli.rs  crypto.rs  datasource.rs  fs.rs  http.rs  jni.rs  json.rs  mod.rs  zip.rs
crates/matchbox-vm/src/datasource/: mod.rs  registry.rs  traits.rs
crates/matchbox-vm/src/datasource/drivers/: mod.rs  postgres.rs
crates/matchbox-vm/src/types/: box_string.rs  macros_test.rs  mod.rs  value.rs
crates/matchbox-vm/src/vm/: chunk.rs  gc.rs  intern.rs  interop_tests.rs  jit.rs  mod.rs  opcode.rs  shape.rs
crates/matchbox-wasi-http-runner/: Cargo.toml
crates/matchbox-wasi-http-runner/src/: lib.rs
docker/postgres/: Dockerfile  init.sql
docs/: developer_guide.md  differences-from-boxlang.md  index.md  rust-modules-guide.md
docs/building-and-deploying/: aws-lambda-aws-cli-setup.md  aws-lambda-prd.md  docker-image.md  esp32-web-server-plan.md  esp32.md  javascript-and-wasm.md  jit.md  native-builds.md  wasm-container.md
docs/building-and-deploying/aws-lambda-issues/: README.md
docs/embedded/: esp32-compile-pipeline.md  esp32-embedded-vm-plan.md  esp32-platform-layout.md  esp32-runner-plan.md
docs/examples/app_server/: README.md  app.bxs
docs/examples/app_server/public/: site.css
docs/examples/app_server/views/: home.bxm
docs/examples/aws_lambda_single_file/: Lambda.bx  README.md  event.json
docs/examples/basic_project/: main.bxs
docs/examples/boxlang_alpine_js/: README.md  counter.bxs  index.html
docs/examples/esp32/: README.md  hello_esp32.bxs
docs/examples/esp32_camera/: main.bxs
docs/examples/esp32_camera/native/: camera.rs
docs/examples/wasm_browser/: README.md  index.html  todo.bxs
docs/examples/web_server/: README.md  about.bxm  contact.bxm  index.bxm  styles.css
docs/examples/websocket_counter/: README.md  app.bxs
docs/examples/websocket_counter/views/: home.bxm
docs/getting-started/: building-matchbox.md  building.md  features-overview.md  installation.md  what-is-matchbox.md
install/: install.bat  install.ps1  install.sh
src/: embedded.rs  esp32_fusion_runner_template.rs.txt  js_bundle_template.js  lib.rs  main.rs  modules.rs  stubs.rs
src/ast/: mod.rs
src/bifs/: jni.rs  mod.rs
src/browser/: bootstrap.rs  mod.rs  packaging.rs  runtime.rs
src/compiler/: mod.rs
src/env/: mod.rs
src/evaluator/: mod.rs
src/parser/: boxlang.pest  mod.rs
src/types/: mod.rs
src/vm/: chunk.rs  mod.rs  opcode.rs  shape.rs
stubs/: runner_stub_native
tests/: browser_bundle_integration_tests.rs  integration_tests.rs  js_bundle_tests.rs  todo.bxs  todo_no_tui.bxs  tui_test_no_init.bxs  tui_test_simple.bxs  web_runtime_tests.rs
tests/models/: AnonymousTest.bx  BXExtensionTest.bx  InitTest.bx  LockTest.bx  NewDebug.bx  SimpleTSPL.bx  VarsTest.bx
tests/native_fusion/: script.bxs
tests/native_fusion/native/: crypto.rs  macro_module.rs  multiply.rs
tests/scripts/: arrays.bxs  bvm_features.bxs  bytes_bifs.bxs  bytes_bifs_invalid.bxs  datasource_params.bxs  datasource_query_new.bxs  datasource_return_types.bxs  datasource_select.bxs  datasource_select_table.bxs  for_in_loops.bxs  hello_world.bxb  hello_world.bxs  java_import.bxs  java_test.bxs  jit_concat.bxs  jit_deopt_recompile.bxs  jit_hot_fn.bxs  jit_ic_deopt.bxs  jit_ic_struct.bxs  jit_iter.bxs  jit_leaf_call.bxs  jit_osr_loop.bxs  jit_pic_member.bxs  jit_type_guards.bxs  nested_interpolation.bxs  return.bxs  string_concat.bxs  string_interpolation.bxs  top_level_return.bxs  tui_app_instantiation.bxs  tui_fluent.bxs  vm_anonymous_class.bxs  vm_array_sparse.bxs  vm_auto_accessor.bxs  vm_bx_extension.bxs  vm_continue.bxs  vm_fiber_priority.bxs  vm_for_classic_var.bxs  vm_for_in_var_minimal.bxs  vm_imports_alias.bxs  (+19 more)
