[workspace]
members = [
    "crates/matchbox-vm",
    "crates/matchbox-compiler",
    "crates/matchbox-macros",
]

[package]
name = "matchbox"
version = "0.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
matchbox_vm = { path = "crates/matchbox-vm" }
matchbox_compiler = { path = "crates/matchbox-compiler" }
wasm-encoder = "0.245.1"
wasmparser = "0.245.1"
base64-simd = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[features]
default = []
cross-compile = []

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimizations
panic = "abort"     # Remove stack unwinding code
strip = true        # Automatically strip symbols from the binary
