[workspace]
members = [
    "crates/matchbox-vm",
    "crates/matchbox-compiler",
    "crates/matchbox-macros",
]
exclude = [
    "crates/matchbox-esp32-runner",
]

[package]
name = "matchbox"
version = "0.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
notify = "8.0.0"
ctrlc = "3.4"
libc = "0.2"
bincode = "1.3.3"
matchbox_vm = { path = "crates/matchbox-vm" }
matchbox_compiler = { path = "crates/matchbox-compiler" }
wasm-encoder = "0.245.1"
wasmparser = "0.245.1"
base64-simd = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[features]
default = ["bif-io", "bif-jni", "bif-crypto", "bif-cli", "jit"]
cross-compile = []
jit = ["matchbox_vm/jit"]
bif-io = ["matchbox_vm/bif-io"]
bif-http = ["matchbox_vm/bif-http"]
bif-zip = ["matchbox_vm/bif-zip"]
bif-crypto = ["matchbox_vm/bif-crypto"]
bif-cli = ["matchbox_vm/bif-cli"]
bif-jni = ["matchbox_vm/bif-jni"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimizations
panic = "abort"     # Remove stack unwinding code
strip = true        # Automatically strip symbols from the binary
