[package]
name = "matchbox-esp32-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
matchbox_vm = { path = "../matchbox-vm" }
anyhow = "1.0"
esp-idf-svc = { version = "0.52", features = ["binstart"] }
esp-idf-sys = "0.37"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
bincode = "1.3.3"
log = "0.4"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[profile.release]
opt-level = "s" # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
