[package]
name = "matchbox_runner"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
matchbox_vm = { path = "../matchbox-vm" }
bincode = "1.3.3"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
anyhow = "1.0.102"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
bif-io = ["matchbox_vm/bif-io"]
bif-http = ["matchbox_vm/bif-http"]
bif-zip = ["matchbox_vm/bif-zip"]
bif-crypto = ["matchbox_vm/bif-crypto"]
bif-cli = ["matchbox_vm/bif-cli"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
