[package]
name = "matchbox_runner"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
matchbox_vm = { path = "../matchbox-vm" }
bincode = "1.3.3"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
anyhow = "1.0.102"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ctrlc = "3.5.2"

[features]
default = []
js = ["matchbox_vm/js"]
bif-io = ["matchbox_vm/bif-io"]
bif-http = ["matchbox_vm/bif-http"]
bif-zip = ["matchbox_vm/bif-zip"]
bif-crypto = ["matchbox_vm/bif-crypto"]
bif-cli = ["matchbox_vm/bif-cli"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
