[package]
name = "matchbox_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
matchbox_vm = { path = "../matchbox-vm" }
matchbox_compiler = { path = "../matchbox-compiler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
