[package]
name = "matchbox_vm"
version = "0.2.0"
edition = "2024"

[dependencies]
matchbox-macros = { path = "../matchbox-macros" }
anyhow = "1.0.102"
bincode = "1.3.3"
rand = "0.10.0"
getrandom = { version = "0.4.2" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
web-time = "1.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "Node", "EventTarget"] }

[features]
default = []
js = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/wasm_js"]
jit = ["cranelift-jit", "cranelift-frontend", "cranelift-codegen", "cranelift-module", "cranelift-native"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
