[package]
name = "matchbox_vm"
version = "0.2.0"
edition = "2024"

[dependencies]
matchbox-macros = { path = "../matchbox-macros" }
anyhow = "1.0.102"
bincode = "1.3.3"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
rand = "0.10.0"
getrandom = { version = "0.4.2" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
web-time = "1.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
ctrlc = "3.4"
serde_json = "1.0"

# Optional dependencies for BIFs
walkdir = { version = "2.5", optional = true }
zip = { version = "2.2", optional = true }
sha2 = { version = "0.10", optional = true }
fs_extra = { version = "1.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jni = { version = "0.21.1", features = ["invocation"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
crossterm = { version = "0.28", optional = true }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
postgres = { version = "0.19", default-features = false, features = ["with-chrono-0_4"], optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "Node", "EventTarget", "Response", "Headers", "Request", "RequestInit", "RequestMode"] }

[features]
default = []
js = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/wasm_js", "uuid/js"]
jit = ["cranelift-jit", "cranelift-frontend", "cranelift-codegen", "cranelift-module", "cranelift-native"]
bif-io = ["walkdir", "fs_extra"]
bif-http = ["reqwest", "wasm-bindgen-futures", "js-sys", "web-sys"]
bif-zip = ["zip"]
bif-crypto = ["sha2"]
bif-cli = ["crossterm"]
bif-jni = ["jni"]
bif-datasource = ["postgres", "r2d2", "r2d2_postgres"]
