[package]
name = "matchbox_wasi_http_runner"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
matchbox_compiler = { path = "../matchbox-compiler", features = ["bxm"] }
matchbox_vm = { path = "../matchbox-vm" }
mime_guess = "2.0"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "rng-getrandom"] }
wasi = "0.14.7"
